fix align-text

--- a/p.6/style.css
+++ b/p.6/style.css
@@ -101,6 +101,7 @@ main{
     justify-content: space-between;
     flex-grow: 1;
     align-items: center;
+    text-align: center;
     padding-bottom: 6px;
     padding-top: 2px;
 }
